# rowboat

./: .drone.yml  .env.example  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DOCS.md  GITHUB_COPILOT_E2E_TESTING.md  GITHUB_COPILOT_INTEGRATION.md  IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  README.md  README.zh-CN.md  build-electron.sh  custom_handler.py  docker-compose.yml  google-setup.md  hosted_setup.mdx  index.html  plan.md  sitemap.xml  start.sh
.devcontainer/: devcontainer.json
add_tools/: index.html
agents/: index.html
apps/llm_router/: README.md  pyproject.toml
apps/llm_router/llm_router/: __init__.py  llm_router.py
aur/: .SRCINFO  PKGBUILD  rowboat.desktop
aur-bin/: .SRCINFO  PKGBUILD
create_agents/: index.html
data_sources/: index.html
docs/: 01-objective.md  02-implementation-plan.md  03-test-plan.md
graph/: index.html
graphify-out/: .graphify_analysis.json  .graphify_detect.json  .graphify_labels.json  manifest.json
hosted_setup/: index.html
license/: index.html
litellm/: Dockerfile  README.md  build.sh  config.yaml  schema.prisma  setup.py  test_modal.py  test_modal_handler.py
oss_installation/: index.html
playground/: index.html
prompts/: index.html
search/: search_index.json
simulate/: index.html
studio_overview/: index.html
testing/: index.html
tests/: test_llm_transformation.py  test_modal_handler.py  test_tool_call_transformation.py  test_tool_call_transformation.py.safe
tools/: index.html
update_agents/: index.html
using-rowboat/: agents.mdx  triggers.mdx
using_rag/: index.html
(+1017 files in other folders)
